Bug 10389 - kernel 2.6.24-1 doesn't detect my laptop correctly
Summary: kernel 2.6.24-1 doesn't detect my laptop correctly
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: ACPICA-Core (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-03 10:28 UTC by Alexei Kouznetsov
Modified: 2008-10-24 23:05 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.24-1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
output of acpidump (422.77 KB, text/plain)
2008-04-08 11:05 UTC, Alexei Kouznetsov
Details
patch: don;t load asus-acpi if model is not supported (815 bytes, patch)
2008-04-08 18:25 UTC, Zhang Rui
Details | Diff

Description Alexei Kouznetsov 2008-04-03 10:28:32 UTC
Latest working kernel version: 2.6.22-3
Earliest failing kernel version: 2.6.24-1
Distribution: debian testing (lenny)
Hardware Environment: Toshiba Satellite L40-17R laptop
Software Environment: gnome
Problem Description:
After upgading to kernel 2.6.24-1 I noticed, that my system started to dump the same lines to /var/log/acpid, slowing down overall performance. Here is beginning of log:

[Thu Apr  3 19:36:36 2008] starting up
[Thu Apr  3 19:36:36 2008] 75 rules loaded
[Thu Apr  3 19:36:40 2008] client connected from 3185[107:110]
[Thu Apr  3 19:36:40 2008] 1 client rule loaded
[Thu Apr  3 19:36:43 2008] received event "hotkey ATKD 0000005f 00000000"
[Thu Apr  3 19:36:43 2008] notifying client 3185[107:110]
[Thu Apr  3 19:36:43 2008] executing action "/etc/acpi/asus-wireless.sh on"
[Thu Apr  3 19:36:43 2008] BEGIN HANDLER MESSAGES
[Thu Apr  3 19:36:43 2008] END HANDLER MESSAGES
[Thu Apr  3 19:36:43 2008] action exited with status 0
[Thu Apr  3 19:36:43 2008] completed event "hotkey ATKD 0000005f 00000000"
[Thu Apr  3 19:36:43 2008] received event "hotkey ATKD 0000005f 00000001"
[Thu Apr  3 19:36:43 2008] notifying client 3185[107:110]
[Thu Apr  3 19:36:43 2008] executing action "/etc/acpi/asus-wireless.sh on"
[Thu Apr  3 19:36:43 2008] BEGIN HANDLER MESSAGES

... and so on.

dmesg shows correct detection of Toshiba laptop:

ACPI: SSDT 3F7B8CC0, 04E6 (r1  PmRef    CpuPm     3000 INTL 20051117)
ACPI: DMI detected: Toshiba
ACPI: PM-Timer IO Port: 0x808

But later it fails to determine exact model and chooses Asus:

Asus Laptop ACPI Extras version 0.30
  unsupported model T20, trying default values
  send /proc/acpi/dsdt to the developers

Steps to reproduce: Just login.
Comment 1 Zhang Rui 2008-04-06 20:24:29 UTC
Please attach the acpidump of your laptop with the latest pmtools at
http://www.kernel.org/pub/linux/kernel/people/lenb/acpi/utils/
Comment 2 Alexei Kouznetsov 2008-04-08 11:05:28 UTC
Created attachment 15667 [details]
output of acpidump

Here is output of acpidump. It also contain two "checksum error" warnings.
Comment 3 Zhang Rui 2008-04-08 18:21:21 UTC
I see, the Asus-acpi driver is loaded on this laptop because it finds a "ATK0100" device.
asus_hotk_get_info returns AE_OK even if it founds the unsupported model.
And in turn install the notify handler for this device.
So I think this is a bug in the asus-acpi driver. But as this driver is deprecated by the asus-laptop, not sure if this fix can be upstream or not.
Comment 4 Zhang Rui 2008-04-08 18:25:51 UTC
Created attachment 15681 [details]
patch: don;t load asus-acpi if model is not supported

Please apply this patch and see if the problem is gone. :)
Comment 5 Alexei Kouznetsov 2008-04-15 07:39:35 UTC
> Please apply this patch and see if the problem is gone. :)
> 

At last I managed to patch and compile the kernel. The problem is gone. No constant writing to acpid logs.

> But as this driver is
deprecated by the asus-laptop, not sure if this fix can be upstream or not.
>

That's sad :(
Comment 6 Zhang Rui 2008-04-24 00:15:31 UTC
Len, this is a bug in asus-acpi driver.
If we won't remove the driver in near future, I think it's better to apply the patch in comment #4.
Comment 7 Len Brown 2008-10-16 22:43:01 UTC
patch in comment #4 applied to acpi-test
Comment 8 Len Brown 2008-10-24 23:05:27 UTC
shipped in linux-2.6.28-rc1
closed

commit 7745384080ef70f7710530afa3e45477b126e056
Author: Zhang Rui <rui.zhang@intel.com>
Date:   Fri Oct 17 01:42:41 2008 -0400

    don't load asus-acpi if model is not supported

Note You need to log in before you can comment on or make changes to this bug.